--- a/index.html
+++ b/index.html
@@ -33,14 +33,18 @@
         <div class="header-contact">
           <ul>
             <li class="contact-list">
-              <a href="tel:+380961111111" class="header-grey"
-                >+38 096 111 11 11</a
+              <a href="mailto:info@devstudio.com" class="header-grey"
+                > <svg width="16" height="12">
+                  <use href="./images/symbol-defs.svg#icon-email"></use>
+                </svg>info@devstudio.com</a
               >
             </li>
             <li class="contact-list">
-              <a href="mailto:info@devstudio.com" class="header-grey"
-                >info@devstudio.com</a
-              >
+              <a href="tel:+380961111111" class="header-grey">
+                <svg width="10" height="16">
+                  <use href="./images/symbol-defs.svg#icon-smartphone"></use>
+                </svg>
+                +38 096 111 11 11</a>
             </li>
           </ul>
         </div>
@@ -52,9 +56,9 @@
         <button type="button" class="main-btn-style">Замовити послугу</button>
       </div>
     </main>
-    <section class="section-skills">
-      <div class="container">
-        <ul>
+    <section class="section-skills container">
+      <div>
+        <ul class="section-skills-box">
           <li>
             <h3 class="skills-title">УВАГА ДО ДЕТАЛЕЙ</h3>
             <p class="skills-text">
