--- a/portfolio.html
+++ b/portfolio.html
@@ -33,28 +33,32 @@
         </nav>
         <div class="header-contact">
           <ul>
-            <li>
-              <a href="tel:+380961111111" class="header-grey"
-                >+38 096 111 11 11</a
+            <li class="contact-list">
+              <a href="mailto:info@devstudio.com" class="header-grey"
+                > <svg width="16" height="12">
+                  <use href="./images/symbol-defs.svg#icon-email"></use>
+                </svg>info@devstudio.com</a
               >
             </li>
-            <li>
-              <a href="mailto:info@devstudio.com" class="header-grey"
-                >info@devstudio.com</a
-              >
+            <li class="contact-list">
+              <a href="tel:+380961111111" class="header-grey">
+                <svg width="10" height="16">
+                  <use href="./images/symbol-defs.svg#icon-smartphone"></use>
+                </svg>
+                +38 096 111 11 11</a>
             </li>
           </ul>
         </div>
       </div>
     </header>
       <main class="main-portfolio container">
-        <div class="main-btn-nav">
+        <div>
           <ul class="main-btn">
-            <li><button type="button" class="main-btn-style">Усі</button></li>
-            <li><button type="button" class="main-btn-style">Веб-сайти</button></li>
-            <li><button type="button" class="main-btn-style">Додатки</button></li>
-            <li><button type="button" class="main-btn-style">Дизайн</button></li>
-            <li><button type="button" class="main-btn-style">Маркетинг</button></li>
+            <li><button type="button" class="btn-portfolio">Усі</button></li>
+            <li><button type="button" class="btn-portfolio">Веб-сайти</button></li>
+            <li><button type="button" class="btn-portfolio">Додатки</button></li>
+            <li><button type="button" class="btn-portfolio">Дизайн</button></li>
+            <li><button type="button" class="btn-portfolio">Маркетинг</button></li>
           </div></ul>
         <div>
           <ul class="card-set">
@@ -177,10 +181,10 @@
                   alt="Growing Business"
                   width="370"
                   height="294"
-                />
+                /><div class="img-info">
                 <h2 class="section-title">Growing Business</h2>
                 <p class="section-text">Додаток</p>
-              </a>
+              </a></li></div>
           </ul>
         </div>
       </main>
