--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
       <div>
         <ul class="section-skills-box">
           <li>
+            <div class="skills-icon-block">
+              <svg width="70" height="70">
+              <use href="./images/symbol-defs.svg#icon-antenna"></use>
+                        </svg>
+            </div>
             <h3 class="skills-title">УВАГА ДО ДЕТАЛЕЙ</h3>
             <p class="skills-text">
               Ідейні міркування, і навіть початок повсякденної роботи з
@@ -67,6 +72,11 @@
             </p>
           </li>
           <li>
+            <div class="skills-icon-block">
+              <svg width="70" height="70">
+              <use href="./images/symbol-defs.svg#icon-clock"></use>
+                        </svg>
+            </div>
             <h3 class="skills-title">ПУНКТУАЛЬНІСТЬ</h3>
             <p class="skills-text">
               Завдання організації, особливо рамки і місце навчання кадрів тягне
@@ -74,12 +84,22 @@
             </p>
           </li>
           <li>
+            <div class="skills-icon-block">
+              <svg width="70" height="70">
+              <use href="./images/symbol-defs.svg#icon-diagram"></use>
+                        </svg>
+            </div>
             <h3 class="skills-title">ПЛАНУВАННЯ</h3>
             <p class="skills-text">
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
           <li>
+            <div class="skills-icon-block">
+              <svg width="70" height="70">
+              <use href="./images/symbol-defs.svg#icon-astronaut"></use>
+                        </svg>
+            </div>
             <h3 class="skills-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
             <p class="skills-text">
               Значимість цих проблем настільки очевидна, що реалізація планових
