--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           ><span class="logo-black">Studio</span></a
         >
         <nav class="header-nav">
-          <ul class="header-logo">
+          <ul>
             <li><a href="./index.html" class="header-btn">Студія</a></li>
             <li>
               <a href="./portfolio.html" class="header-btn-black">Портфоліо</a>
@@ -37,16 +37,14 @@
                 <svg class="contact-icon" width="16" height="12">
                   <use href="./images/symbol-defs.svg#icon-email"></use>
                 </svg>
-                <span>info@devstudio.com</span></a
-              >
+                <span>info@devstudio.com</span></a>
             </li>
             <li class="contact-list">
               <a href="tel:+380961111111" class="header-grey">
                 <svg class="contact-icon" width="10" height="16">
                   <use href="./images/symbol-defs.svg#icon-smartphone"></use>
                 </svg>
-                <span>+38 096 111 11 11</span></a
-              >
+                <span>+38 096 111 11 11</span></a>
             </li>
           </ul>
         </div>
