--- a/portfolio.html
+++ b/portfolio.html
@@ -23,10 +23,10 @@
             ><span class="logo-black">Studio</span></a
           >
         <nav class="header-nav">
-           <ul class="header-logo">
-            <li><a href="./index.html" class="header-btn">Студія</a></li>
+           <ul>
+            <li><a href="./index.html" class="header-btn-black">Студія</a></li>
             <li>
-              <a href="./portfolio.html" class="header-btn-black">Портфоліо</a>
+              <a href="./portfolio.html" class="header-btn">Портфоліо</a>
             </li>
             <li><a href="" class="header-btn-black">Контакти</a></li>
           </ul>
@@ -34,18 +34,18 @@
         <div class="header-contact">
           <ul>
             <li class="contact-list">
-              <a href="mailto:info@devstudio.com" class="header-grey"
-                > <svg class="contact-icon" width="16" height="12">
+              <a href="mailto:info@devstudio.com" class="header-grey">
+                <svg class="contact-icon" width="16" height="12">
                   <use href="./images/symbol-defs.svg#icon-email"></use>
-                </svg>info@devstudio.com</a
-              >
+                </svg>
+                <span>info@devstudio.com</span></a>
             </li>
             <li class="contact-list">
               <a href="tel:+380961111111" class="header-grey">
                 <svg class="contact-icon" width="10" height="16">
                   <use href="./images/symbol-defs.svg#icon-smartphone"></use>
                 </svg>
-                +38 096 111 11 11</a>
+                <span>+38 096 111 11 11</span></a>
             </li>
           </ul>
         </div>
