--- a/index.html
+++ b/index.html
@@ -23,12 +23,16 @@
           ><span class="logo-black">Studio</span></a
         >
         <nav class="header-nav">
-          <ul>
-            <li><a href="./index.html" class="header-btn">Студія</a></li>
-            <li>
-              <a href="./portfolio.html" class="header-btn-black">Портфоліо</a>
+          <ul class="header-nav-position">
+            <li class="nav-position-action">
+              <a href="./index.html" class="header-btn color-action">Студія</a>
             </li>
-            <li><a href="" class="header-btn-black">Контакти</a></li>
+            <li class="nav-position-action">
+              <a href="./portfolio.html" class="header-btn">Портфоліо</a>
+            </li>
+            <li class="nav-position-action">
+              <a href="" class="header-btn">Контакти</a>
+            </li>
           </ul>
         </nav>
         <div class="header-contact">
@@ -53,16 +57,16 @@
         </div>
       </div>
     </header>
-    <main class="main-bg section">
+    <main class="main-bg indent">
       <div class="container">
         <h1 class="main-title">Ефективні рішення для вашого бізнесу</h1>
         <button type="button" class="main-btn-style">Замовити послугу</button>
       </div>
     </main>
-    <section class="section-skills container">
-      <div>
-        <ul class="section-skills-box">
-          <li>
+    <section class="section-skills">
+      <div class="container">
+        <ul class="skills-item">
+          <li class="item">
             <div class="skills-icon-block">
               <svg width="70" height="70">
                 <use href="./images/symbol-defs.svg#icon-antenna"></use>
@@ -74,7 +78,7 @@
               формування позиції.
             </p>
           </li>
-          <li>
+          <li class="item">
             <div class="skills-icon-block">
               <svg width="70" height="70">
                 <use href="./images/symbol-defs.svg#icon-clock"></use>
@@ -86,7 +90,7 @@
               у себе.
             </p>
           </li>
-          <li>
+          <li class="item">
             <div class="skills-icon-block">
               <svg width="70" height="70">
                 <use href="./images/symbol-defs.svg#icon-diagram"></use>
@@ -97,7 +101,7 @@
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
-          <li>
+          <li class="item">
             <div class="skills-icon-block">
               <svg width="70" height="70">
                 <use href="./images/symbol-defs.svg#icon-astronaut"></use>
@@ -112,23 +116,32 @@
         </ul>
       </div>
     </section>
-    <section class="section-gallery section">
+    <section class="section-gallery indent">
       <div class="work-gallery container">
         <h2 class="gallery-title">Чим ми займаємося</h2>
         <ul class="gallery-list">
-          <li class="img-gallery">
-            <img src="./images/1.jpg" alt="foto1" width="370" height="294" />
-          </li>
-          <li class="img-gallery">
-            <img src="./images/2.jpg" alt="foto2" width="370" height="294" />
-          </li>
-          <li class="img-gallery">
-            <img src="./images/3.jpg" alt="foto3" width="370" height="294" />
-          </li>
+          <div class="glr-text-position">
+            <li class="img-gallery">
+              <img src="./images/1.jpg" alt="foto1" width="370" height="294" />
+              <p class="gallery-text-style">Десктопні додатки</p>
+            </li>
+          </div>
+          <div class="glr-text-position">
+            <li class="img-gallery">
+              <img src="./images/2.jpg" alt="foto1" width="370" height="294" />
+              <p class="gallery-text-style">Мобільні додатки</p>
+            </li>
+          </div>
+          <div class="glr-text-position">
+            <li class="img-gallery">
+              <img src="./images/3.jpg" alt="foto1" width="370" height="294" />
+              <p class="gallery-text-style">Дизайнерські рішення</p>
+            </li>
+          </div>
         </ul>
       </div>
     </section>
-    <section class="section-team section">
+    <section class="section-team indent">
       <div class="container">
         <h2 class="our-team">Наша команда</h2>
         <ul class="team-list">
@@ -295,8 +308,8 @@
         </ul>
       </div>
     </section>
-    <section class="container">
-      <div class="section">
+    <section class="indent">
+      <div class="container">
         <h2 class="our-team">Постійні клієнти</h2>
         <ul class="clients-section">
           <li>
