--- a/portfolio.html
+++ b/portfolio.html
@@ -24,11 +24,13 @@
         >
         <nav class="header-nav">
           <ul>
-            <li><a href="./index.html" class="header-btn-black">Студія</a></li>
+            <li><a href="./index.html" class="header-btn">Студія</a></li>
             <li>
-              <a href="./portfolio.html" class="header-btn">Портфоліо</a>
+              <a href="./portfolio.html" class="header-btn color-action"
+                >Портфоліо</a
+              >
             </li>
-            <li><a href="" class="header-btn-black">Контакти</a></li>
+            <li><a href="" class="header-btn">Контакти</a></li>
           </ul>
         </nav>
         <div class="header-contact">
@@ -54,7 +56,7 @@
       </div>
     </header>
     <main class="main-portfolio container">
-      <section>
+      <section class="indent">
         <div class="container">
           <ul class="main-btn">
             <li><button type="button" class="btn-portfolio">Усі</button></li>
@@ -72,12 +74,22 @@
           <ul class="card-set">
             <li class="sect-gall-img">
               <a href="" class="sect-gall-link">
-                <img
-                  src="./images/технокряк.jpg"
-                  alt="Технокряк"
-                  width="370"
-                  height="294"
-                />
+                <div class="glr-position">
+                  <img
+                    src="./images/технокряк.jpg"
+                    alt="Технокряк"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="glr-position-style">
+                    <p class="glr-position-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="img-info">
                   <h2 class="section-title">Технокряк</h2>
                   <p class="section-text">Веб-сайт</p>
